custom component DOM restructuring

--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,9 @@
   <title>KEA Restaurant - Contact</title>
 </head>
 <body>
-  <header-component></header-component>
+  <header>
+    <header-component></header-component>
+  </header>
   <main>
     <section>
       <address>
@@ -61,6 +63,8 @@
       </form>
     </section>
   </main>
-  <footer-component></footer-component>
+  <footer>
+    <footer-component></footer-component>
+  </footer>
 </body>
 </html>
