--- a/views/menu.html
+++ b/views/menu.html
@@ -9,7 +9,9 @@
   <title>KEA Restaurant - Menu</title>
 </head>
 <body>
-  <header-component></header-component>
+  <header>
+    <header-component></header-component>
+  </header>
   <main>
     <article>
       <h2>Turing Salad</h2>
@@ -36,6 +38,8 @@
       <img src="../assets/restaurant_assets/img/icecream.jpg" alt="ice cream">
     </article>
   </main>
-  <footer-component></footer-component>
+  <footer>
+    <footer-component></footer-component>
+  </footer>
 </body>
 </html>
