--- a/views/menu.html
+++ b/views/menu.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/styles.css">
-  <script src="../scripts/components/header.js" type="text/javascript" defer></script>
-  <script src="../scripts/components/footer.js" type="text/javascript" defer></script>
   <title>KEA Restaurant - Menu</title>
 </head>
 <body>
   <header>
-    <header-component></header-component>
+    <h1>Restaurant KEA</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/views/menu.html">Menu</a>
+        </li>
+        <li>
+          <a href="/views/contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main>
     <article>
@@ -39,7 +49,7 @@
     </article>
   </main>
   <footer>
-    <footer-component></footer-component>
+    <p>&copy; 2023 KEA Development</p>
   </footer>
 </body>
 </html>
