--- a/views/contact.html
+++ b/views/contact.html
@@ -32,7 +32,7 @@
       </address>
     </section>
     <section>
-      <img src="../assets/restaurant_assets/img/map.jpg" alt="map over KEA Campus" width="100%"/>
+      <img src="/assets/restaurant_assets/img/map.jpg" alt="map over KEA Campus" width="100%"/>
     </section>
     <section>
       <form>
