--- a/views/menu.html
+++ b/views/menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="/[KEA-Restaurant]/"/>
+  <base href="/KEA-Restaurant/"/>
   <title>KEA Restaurant - Menu</title>
 </head>
 <body>
