trying relative pathing

--- a/views/contact.html
+++ b/views/contact.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="/KEA-Restaurant/"/>
   <title>KEA Restaurant - Contact</title>
 </head>
 <body>
@@ -15,10 +14,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/views/menu.html">Menu</a>
+          <a href="../views/menu.html">Menu</a>
         </li>
         <li>
-          <a href="/views/contact.html">Contact</a>
+          <a href="../views/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -32,7 +31,7 @@
       </address>
     </section>
     <section>
-      <img src="/assets/restaurant_assets/img/map.jpg" alt="map over KEA Campus" width="100%"/>
+      <img src="../assets/restaurant_assets/img/map.jpg" alt="map over KEA Campus" width="100%"/>
     </section>
     <section>
       <form>
