--- a/views/menu.html
+++ b/views/menu.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="/KEA-Restaurant/"/>
   <title>KEA Restaurant - Menu</title>
 </head>
 <body>
@@ -15,10 +14,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/views/menu.html">Menu</a>
+          <a href="../views/menu.html">Menu</a>
         </li>
         <li>
-          <a href="/views/contact.html">Contact</a>
+          <a href="../views/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -28,25 +27,25 @@
       <h2>Turing Salad</h2>
       <p>Sun-dried tomatos and feta cheese on top of a thin layer of lettuce. Choose between our balsamic, mustard or barbecue dressing.</p>
       <p>65 kr.</p>
-      <img src="/assets/restaurant_assets/img/salad.jpg" alt="salad">
+      <img src="../assets/restaurant_assets/img/salad.jpg" alt="salad">
     </article>
     <article>
       <h2>Pizza Berners-Lee</h2>
       <p>Tomato, mozzarella, pepperoni and rucula. Choose between our thin or thick bread base.</p>
       <p>80 kr.</p>
-      <img src="/assets/restaurant_assets/img/pizza.jpg" alt="pizza">
+      <img src="../assets/restaurant_assets/img/pizza.jpg" alt="pizza">
     </article>
     <article>
       <h2>Codd Hamburger</h2>
       <p>High quality meat, lettuce, tomato, onion, bacon, cheese, jalape&ntilde;os and a lot of love. Which sauce do you prefer: BBQ, Dijon or mayonaisse? It comes with French fries and coleslaw salad.</p>
       <p>115 kr.</p>
-      <img src="/assets/restaurant_assets/img/burger.jpg" alt="hamburger">
+      <img src="../assets/restaurant_assets/img/burger.jpg" alt="hamburger">
     </article>
     <article>
       <h2>Cerf Cream</h2>
       <p>Delightful strawberry icecream topped with actual strawberries. In cone or vase. Multiple toppings available.</p>
       <p>65 kr.</p>
-      <img src="/assets/restaurant_assets/img/icecream.jpg" alt="ice cream">
+      <img src="../assets/restaurant_assets/img/icecream.jpg" alt="ice cream">
     </article>
   </main>
   <footer>
