--- a/views/menu.html
+++ b/views/menu.html
@@ -14,10 +14,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="../views/menu.html">Menu</a>
+          <a href="./menu.html">Menu</a>
         </li>
         <li>
-          <a href="../views/contact.html">Contact</a>
+          <a href="./contact.html">Contact</a>
         </li>
       </ul>
     </nav>
