--- a/views/contact.html
+++ b/views/contact.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/">Home</a>
+          <a href="../">Home</a>
         </li>
         <li>
           <a href="./menu.html">Menu</a>
