--- a/views/menu.html
+++ b/views/menu.html
@@ -11,13 +11,13 @@
     <nav>
       <ul>
         <li>
-          <a href="../">Home</a>
+          <a href="../" title="Home">Home</a>
         </li>
         <li>
-          <a href="./menu.html">Menu</a>
+          <a href="./menu.html" title="Menu">Menu</a>
         </li>
         <li>
-          <a href="./contact.html">Contact</a>
+          <a href="./contact.html" title="Contact">Contact</a>
         </li>
       </ul>
     </nav>
